SigmaCodebackup3rdSep/objects/Service_Quote_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <formula>Unit_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Covered_under_Contract_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covered under Contract(Y/N)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Service Quote Line Items</relationshipLabel>
        <relationshipName>Service_Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>Service_Contract__c</referenceTo>
        <relationshipLabel>Service Quote Line Items</relationshipLabel>
        <relationshipName>Service_Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Quote__c</fullName>
        <label>Service Quote</label>
        <referenceTo>Service_Quote__c</referenceTo>
        <relationshipLabel>Service Quote Line Items</relationshipLabel>
        <relationshipName>Service_Quote_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Service Quote Line Item</label>
    <nameField>
        <displayFormat>SQLI-{0000}</displayFormat>
        <label>Service Quote Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>